@@ -1,3 +1,11 @@
+2008-11-13  Bastien Nocera  <hadess@hadess.net>
+
+	* src/backend/bacon-video-widget-gst-0.10.c
+	(bvw_handle_application_message): Fix window
+	resizing to bigger than the screen when playing large video
+	files and "Resize window when new video is loaded" is selected
+	(Closes: #416610)
+
 2008-11-12  Philip Withnall  <philip@tecnocode.co.uk>
 
 	* data/properties.ui: Make the title, album, artist and comment
